// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render basic component should check snapshot with email 1`] = `
<div>
  <div
    class="Avatar contentStyle"
  >
    <span
      class="bp3-popover-wrapper avatarPopOver"
    >
      <span
        class="bp3-popover-target"
      >
        <div
          class="AvatarInner"
          style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
          tabindex="0"
        >
          JD
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with image 1`] = `
<div>
  <div
    class="Avatar contentStyle"
  >
    <span
      class="bp3-popover-wrapper avatarPopOver"
    >
      <span
        class="bp3-popover-target"
      >
        <div
          class="AvatarInner"
          style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
          tabindex="0"
        >
          <img
            alt=""
            class="imageStyle"
            src="https://www.mangaship.com/Content/img/human-avatar.png"
            style="border-radius: 100%; line-height: 26px; width: 28px; height: 28px; font-size: 10px;"
          />
        </div>
      </span>
    </span>
  </div>
</div>
`;

exports[`Render basic component should check snapshot with name 1`] = `
<div>
  <div
    class="Avatar contentStyle"
  >
    <span
      class="bp3-popover-wrapper avatarPopOver"
    >
      <span
        class="bp3-popover-target"
      >
        <div
          class="AvatarInner"
          style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
          tabindex="0"
        >
          JD
        </div>
      </span>
    </span>
  </div>
</div>
`;
